# l2m

./: .env.backup  .env.example  .env.template  .gitignore  .l2m.input.history  .pytest_help.txt  AGENTS.md  ARCHITECTURE_CHANGES.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COLOR_PALETTE.md  CONTRIBUTING.md  CONTRIBUTOR_TEST.md  CONTRIBUTOR_VERIFY.md  HELLO.CBL  HELLO.py  LICENSE  PERFORM_TEST.py  README.md  REPO_MIGRATION_GUIDE.md  TUI_FEATURES.md  install.sh  l2m-tui.sh  parser_output.json  pyproject.toml  python  requirements-dev.txt  requirements.txt  run_cli.py  setup.py  test-bot-activity.py  test_sample1.py  test_sample1_simple.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: CONTRIBUTING.md  ISSUE_SUGGESTIONS.md  SECURITY.md  dependabot.yml  graphite-bot-config.yml
Formula/: atlas.rb  l2m.rb  legacy2modern-cli.rb
api/: README.md  __init__.py  main.py  models.py  run_server.py  services.py
benchmark/: Dockerfile  README.md  benchmark.py  docker.sh  docker_build.sh  over_time.py  plots.py  problem_stats.py  refactor_tools.py  rsync.sh  rungrid.py  swe-bench-lite.txt  swe-bench.txt  swe_bench.py  test_benchmark.py
cli/: args.py  args_formatter.py  commands.py  io.py  l2m_tui.py  main.py  textual_io.py  textual_io_adapter.py  textual_main.py  textual_ui.py  tui_mode.py  tui_utils.py
data/: .gitignore
deprecation/: .gitignore  README.md  pyproject.toml
deprecation/l2m/: __init__.py  __main__.py
docker/: Dockerfile  docker-compose.prod.yml  docker-compose.yml
docs/: CITATION.cff  CONTRIBUTING_LITELLM.md  EXAMPLES_ADD_PROVIDER.md  PROVIDERS.md  README.md  RELEASES.md  agents.md  api.md  architecture.md  enhanced_llm_features.md  evaluations.md  getting_started.md  llm_integration.md  uninstall.md  workflows.md
engine/: __init__.py
evals/: README.md  __init__.py  evaluator.py  run_eval.py
examples/: run_pipeline_example.py
formula/: README.md  legacy2modern-cli.rb
l2m-openai-agents/: .gitignore  README.md  pyproject.toml
l2m-openai-agents/src/: __init__.py  main.py
l2m-openai-agents/src/agents/: __init__.py  orchestrator_agent.py  refactor_agent.py  reviewer_agent.py  translator_agent.py
l2m-openai-agents/src/config/: settings.py
l2m-openai-agents/src/guardrails/: cobol_input_guard.py
l2m-openai-agents/src/sessions/: __init__.py
l2m-openai-agents/src/tools/: __init__.py  cobol_parser_tool.py  code_quality_tool.py  test_runner_tool.py
l2m-openai-agents/src/workflows/: modernization_pipeline.py
l2m-openai-agents/tests/: __init__.py
memory/: memory.json
sandbox/: .dockerignore  Dockerfile  README.md  build.sh  example_usage.py  integration_example.py
scripts/: deploy.py  fix_autogen.py  l2m  legacy2modern  run_tests.sh  setup.py  setup_api_keys.sh  test.py  test_llm_connection.py
src/: __init__.py  analytics.py  copypaste.py  deprecated.py  editor.py  exceptions.py  gui.py  help.py  linter.py  (+17 more)
(+559 files in other folders)
